--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <br>My interests include Algorithms, Machine Learning, Web Development and Data Mining.</p>
             <p class="lead">
               <ul class="list-inline">
-                <li class="list-inline-item"><a href="mailto:vasu.sinngh002@gmail.com" target="_blank"><i class="fa fa-envelope fa-2x fa-fw" aria-hidden="true"></i></a></li>
+                <li class="list-inline-item"><a href="mailto:vasu.singh002@gmail.com" target="_blank"><i class="fa fa-envelope fa-2x fa-fw" aria-hidden="true"></i></a></li>
                 <li class="list-inline-item"><a href="https://github.com/vasu-dev" target="_blank"><i class="fa fa-github fa-2x fa-fw" aria-hidden="true"></i></li>
                 <li class="list-inline-item"><a href="https://www.facebook.com/singh.vasu.002" target="_blank"><i class="fa fa-facebook-official fa-2x fa-fw" aria-hidden="true"></i></li>
                 <li class="list-inline-item"><a href="https://twitter.com/__vasu_" target="_blank"><i class="fa fa-twitter fa-2x fa-fw" aria-hidden="true"></i></li>
                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/vasu-dev/" target="_blank"><i class="fa fa-linkedin fa-2x fa-fw" aria-hidden="true"></i></li>
               </ul>
-              <a href="https://goo.gl/Grq5U4" class="btn btn-secondary font-weight-bold" target="_blank">Resume</a>
+              <a href="https://goo.gl/jgb1Td" class="btn btn-secondary font-weight-bold" target="_blank">Resume</a>
             </p>
           </div>
 
