--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
                 <div class="columns download">
                     <p>
-                        <a href="./resume/Resume.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download Resume</a>
+                        <a href="https://goo.gl/jgb1Td" class="button" target="_blank"><i class="fa fa-download"></i>Download Resume</a>
                     </p>
                 </div>
 
