--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
             <h2>About Me</h2>
 
-            <p>I'm an undergraduate Computer Science major at Delhi Technological University with extensive hands-on experience acquired in software development and data science with advanced knowledge of modern development tools. Seeking a dynamic new role as an intern with a view to achieving a permanent place in the future and contribute to the advancement of the company.
+            <p>I'm an undergraduate Computer Science major at Delhi Technological University with extensive hands-on experience acquired in software development and data science with advanced knowledge of modern development tools. Seeking a dynamic new role as a Softare Developer/Data Scientist with a view of contributing towards the advancement of the company.
             </p>
 
             <div class="row">
@@ -153,7 +153,7 @@
                   <h3>Delhi Technological University</h3>
                   <p class="info">B.Tech. in Computer Engineering <span>&bull;</span> <em class="date">2015 - Current</em></p>
 
-                  <p>CGPA - 7.75 <i>(Upto 5th Semester)</i> </p>
+                  <p>CGPA - 7.8 <i>(Upto 6th Semester)</i> </p>
 
                </div>
 
@@ -206,14 +206,11 @@
 <!----------------------------------------------------------------------->
                <div class="twelve columns">
 
-                  <h3><a href="https://devastryx.tech/" target="_blank">Devastryx</a> - Co-Founder</h3>
-                  <p class="info">Co-Founder <span>&bull;</span> <em class="date">August 2017 - Present</em></p>
+                  <h3><a href="https://devastryx.tech/" target="_blank">Level.AI</a> - Data Science Intern</h3>
+                  <p class="info">Data Science Intern <span>&bull;</span> <em class="date">June 2018 - August 2018</em></p>
 
                   <p>
-                     DevAstryx is a privately held company, consists of creative and multi-talented
-developers hailing from top tier engineering colleges. We provide a wide range
-of services including web design, web development, mobile application
-development, web hosting, and consulting.
+                     Project lead of recommendation and Chatbot modules for their MVP , sikka. Used various technologies like : Flask, MongoDB, Rasa-core etc.
                   </p>
 
                </div>
@@ -221,11 +218,11 @@ development, web hosting, and consulting.
                <div class="twelve columns">
 
                   <h3><a href="https://codingblocks.com/" target="_blank">Coding Blocks</a> - Teaching Assistant</h3>
-                  <p class="info">Teaching Assistant <span>&bull;</span> <em class="date">August 2017 - Present</em></p>
+                  <p class="info">Instructor <span>&bull;</span> <em class="date">August 2017 - Present</em></p>
 
                   <p>
                      Mentor of the Perceptron (Machine and Deep Learning Course) batch,
-consisting of over 30 students.
+consisting of over 50 students.
                   </p>
 
                </div>
