--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 <!-------------------------------------------------------------------------->
                <div class="twelve columns">
 
-                  <h3><a href="https://codingblocks.com/" target="_blank">Coding Blocks</a> - Teaching Assistant</h3>
+                  <h3><a href="https://codingblocks.com/" target="_blank">Coding Blocks</a> - Instructor</h3>
                   <p class="info">Instructor <span>&bull;</span> <em class="date">August 2017 - Present</em></p>
 
                   <p>
